--- a/packages/react-app/src/app.scss
+++ b/packages/react-app/src/app.scss
@@ -52,9 +52,12 @@
   }
   .content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    .title {
+    }
     .phaser-wrapper {
       width: 750px;
       height: 750px;
