--- a/packages/react-app/src/app.scss
+++ b/packages/react-app/src/app.scss
@@ -56,6 +56,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
     .title {
     }
     .phaser-wrapper {
