--- a/packages/react-app/src/components/panels/lb.scss
+++ b/packages/react-app/src/components/panels/lb.scss
@@ -15,7 +15,7 @@
     width: 400px;
     border: 5px solid orange;
     border-radius: 10px;
-    background-color: aqua;
+    background-color: #fe1b5d;
 
     display: flex;
     align-items: center;
